# mmr-tracker

./: .pre-commit-config.yaml
.github/workflows/: ci.yml
backend/: .flake8  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/hooks/: write_requirements.sh
backend/src/app/apps/items/: admin.py  models.py  urls.py  views.py
backend/src/app/apps/items/fixtures/: items.yaml
backend/src/app/apps/items/migrations/: 0001_initial.py
backend/src/app/core/: settings.py  urls.py  views.py
backend/tests/: test_foo.py
backend/tests/apps/: test_models.py
backend/tests/apps/items/: conftest.py  test_models.py  test_serializers.py  test_views.py
