[tool.poetry]
name = "mmr-tracker"
version = "0.1.0"
description = ""
authors = ["nconnel4 <nconnel4@hotmail.com>"]
readme = "README.md"
packages = [{include = "mmr_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
pyaml = "^21.10.1"


[tool.poetry.group.dev.dependencies]
poetry-types = "^0.3.5"
django-stubs = "^1.16.0"
djangorestframework-stubs = "^1.10.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
flake8-django-migrations = "^0.3.0"
flake8-django = "^1.1.5"
flake8-pytest = "^1.4"
flake8-simplify = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
